unpackaged/main/default/objects/Campaign/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =100,"All Campaign Details Captured", "Missing: "&amp;IF( LEN( Name)&lt;5,"Meaningful Campaign Name, ","")&amp;""&amp;IF(ISPICKVAL( Type ,""), "Type, ","")&amp;""&amp;IF( ISPICKVAL( Status ,""), "Status, ","")&amp;""&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, "Start Date, ","")&amp;""&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, "End Date, ","")&amp;""&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, "No Associated Members, ","")&amp;""&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, "Expected Revenue",""))</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
</CustomField>