unpackaged/main/default/objects/Campaign/fields/Days_Remaining_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining_in_Campaign__c</fullName>
    <description>Used to fire automation to update status.</description>
    <formula>EndDate  - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>