unpackaged/main/default/objects/Campaign/fields/Do_Not_Delete_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Delete_Campaign_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Campaign Members should not be deleted. This a a master-level ongoing Campaign.</inlineHelpText>
    <label>Do Not Delete Campaign Members</label>
    <type>Checkbox</type>
</CustomField>