unpackaged/main/default/objects/Campaign/fields/of_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>of_Campaign_Members__c</fullName>
    <label># of Campaign Members</label>
    <summarizedField>CampaignMember.Campaign_Members__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>