unpackaged/main/default/objects/Campaign/listViews/Covid_19_Webinar.listView-meta.xml
<ListView>
    <fullName>Covid_19_Webinar</fullName>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>startsWith</operation>
        <value>Covid-19</value>
    </filters>
    <label>Covid-19 Webinar</label>
</ListView>