unpackaged/main/default/objects/Campaign/listViews/CW19_All_Campaigns.listView-meta.xml
<ListView>
    <fullName>CW19_All_Campaigns</fullName>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.NUM_SENT</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>TOT_NUM_SENT</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>startsWith</operation>
        <value>CW19</value>
    </filters>
    <label>CW19 All Campaigns</label>
</ListView>