unpackaged/main/default/objects/Campaign/listViews/Evergreen1.listView-meta.xml
<ListView>
    <fullName>Evergreen1</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Mine</filterScope>
    <label>Evergreen</label>
</ListView>